--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.afl.waterReminderDrinkAlarmMonitor"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 14
-        versionName "1.8.2"
+        versionCode 16
+        versionName "1.8.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
 
@@ -106,5 +106,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx:17.4.3'
     // Add the Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-crashlytics:17.1.0'
+
+    // Android rate this app library
+    implementation 'io.github.kobakei:ratethisapp:1.2.0'
 
 }
