drink and home fragment view model logic is updated. There is still bug regarding metric text in drink fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,6 @@ dependencies {
     implementation 'io.github.kobakei:ratethisapp:1.2.0'
 
     // debugImplementation because LeakCanary should only run in debug builds.
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
+    // debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
 }
