--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.afl.waterReminderDrinkAlarmMonitor"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 21
-        versionName "1.8.9"
+        versionCode 22
+        versionName "1.8.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         resConfigs "af", "am", "ar", "as", "az", "be", "bg", "bn", "bs", "ca", "cs", "da", "de", "el", "en", "es", "et", "eu", "fa", "fi", "fil", "fr", "gl", "gsw", "gu", "he", "hi", "hr", "hu", "hy", "id", "is", "it", "iw", "ja", "ka", "kk", "km", "kn", "ko", "ky", "ln", "lo", "lt", "lv", "mk", "ml", "mn", "mo", "mr", "ms", "my", "nb", "ne", "nl", "no", "or", "pa", "pl", "pt", "ro", "ru", "si", "sk", "sl", "sq", "sr", "sv", "sw", "ta", "te", "th", "tl", "tr", "uk", "ur", "uz", "vi", "zh", "zh-rTW", "zu"
@@ -48,6 +48,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
     def room_version = "2.2.3"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
